--- a/src/app/card-shirt/card-shirt.component.scss
+++ b/src/app/card-shirt/card-shirt.component.scss
@@ -41,39 +41,35 @@
   }
 
   .power-banner {
-    position: absolute;
     z-index: 2;
-    top: 0;
-    left: 0;
-    width: 33%;
-    height: auto;
+    top: 0 !important;
+    left: 0 !important;
+    width: 33% !important;
+    height: auto !important;
   }
 
   .armor-banner {
-    position: absolute;
     z-index: 2;
-    top: 1.3%;
-    left: 70%;
-    width: 30%;
-    height: auto;
+    top: 1.3% !important;
+    left: 70% !important;
+    width: 30% !important;
+    height: auto !important;
   }
 
   .provision-head {
-    position: absolute;
     z-index: 4;
-    top: 71%;
-    left: 79%;
-    width: 17%;
-    height: auto;
+    top: 71% !important;
+    left: 79% !important;
+    width: 17% !important;
+    height: auto !important;
   }
 
   .provision-banner {
-    position: absolute;
     z-index: 4;
-    top: 82.5%;
-    left: 79%;
-    width: 17%;
-    height: 15%;
+    top: 82.5% !important;
+    left: 79% !important;
+    width: 17% !important;
+    height: 15% !important;
   }
 
   .power, .armor, .provision {
@@ -114,20 +110,18 @@
   }
 
   .rarity {
-    position: absolute;
     z-index: 3;
-    top: 3.25%;
-    left: 4.8%;
-    width: 6.8%;
-    height: auto;
+    top: 3.25% !important;
+    left: 4.8% !important;
+    width: 6.8% !important;
+    height: auto !important;
   }
 
   .type {
-    position: absolute;
     z-index: 4;
-    left: 2.8%;
-    top: 2.2%;
-    width: 27%;
-    height: auto;
+    left: 2.8% !important;
+    top: 2.2% !important;
+    width: 27% !important;
+    height: auto !important;
   }
 }
