little fixes across app

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,5 +35,5 @@
   Based on generator made by <a href="https://gwentcard.online/">Kegian</a>
 </div>
 
-<ng-container *desktop></ng-container>
-<ng-container *mobile></ng-container>
+<ng-container *appDesktop></ng-container>
+<ng-container *appMobile></ng-container>
