--- a/src/app/card-content/card-content.component.scss
+++ b/src/app/card-content/card-content.component.scss
@@ -133,7 +133,8 @@
   .footer-background-2 {
     background-repeat: no-repeat;
     background-size: 100% 100%;
-    height: 12px;
+    margin-top: -2px;
+    height: 14px;
     width: 325px;
   }
 }
